--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@capacitor/android": "^7.4.2",
     "@capacitor/screen-orientation": "^7.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
